# py-event-emitter

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_event_emitter/: __init__.py  emitter.py
tests/: test_event_emitter.py
