[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-event-emitter"
version = "0.2.2"
description = "Type-safe event emitter with sync and async listener support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["events", "emitter", "pubsub", "observer", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-event-emitter#readme"
Repository = "https://github.com/philiprehberger/py-event-emitter"
Issues = "https://github.com/philiprehberger/py-event-emitter/issues"
Changelog = "https://github.com/philiprehberger/py-event-emitter/blob/main/CHANGELOG.md"
